kubernetes/apps/default/sabnzbd/app/networkpolicy.sops.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: sabnzbd-allow-gluetun
  annotations:
    future-me-why: allow ingress and egress to gluetun endpoints; also puts pod in deny-by-default mode for egress
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: sabnzbd
  egress:
    - toPorts:
        - ports:
            - port: ENC[AES256_GCM,data:2NfzEQ==,iv:lCcK8L7ziGB3fsDluqowyL4jc3lDRIRC/d3nZzGanO8=,tag:iTKoVKWwgu1ApXWmuTxriQ==,type:str]
              protocol: ENC[AES256_GCM,data:vX4P,iv:4szKuH/hDYeDCDWsQigY0Bwb8n2MVBrKW9wMlINpyy8=,tag:QhhnrOKa6fK1NWu0V+Q9ng==,type:str]
  ingress:
    - toPorts:
        - ports:
            - port: ENC[AES256_GCM,data:I1PHVQ==,iv:vTv+nHvhSLhXFjtEJuUV2TsnRKTddD4BUXDYzyL8j/c=,tag:q8DUCGDiMBY4CMiIS6Dm0A==,type:str]
              protocol: ENC[AES256_GCM,data:ti3c,iv:HtisUSTDyfywdGz+nWyk8wh1m/FKfmaNPjbxcd9dCVU=,tag:567xDJatKOi01bgW6KkD0Q==,type:str]
sops:
  kms: []
  gcp_kms: []
  azure_kv: []
  hc_vault: []
  age:
    - recipient: age1u006cywqm39pr9zgh2hn0svnry5gs2ayhrtxucz77qc7j88kmqzqxtxz0t
      enc: |
        -----BEGIN AGE ENCRYPTED FILE-----
        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAvT1JOZGdMdXhRN0ZxV3ZH
[...]
        AjzkSaeBduGdQDZoIiqCp3F8vHipYtXfKhl/WtFIt2as0FGIxuELBw==
        -----END AGE ENCRYPTED FILE-----
  lastmodified: "2025-01-08T21:04:07Z"
  mac: ENC[AES256_GCM,data:F+39zYIS3TXMyWBPxMu+uxoeYoUPTpckbA7l3s4gV60EwohgyW+o3bFpKKQoca4gFtMRtIhCsL46NnK7aFTf2+CrSGZZGj2zxCXX28BksVSp2Ed15g+oRMuQdmgzR0eZnan0Xuod4iGPMGW2yVLQMhGyRONYLF52meA/IuBBq+I=,iv:3nmJTBjOGHB3+GhUsPjr9LAEZQXpxNOs9EW2b6XtDA4=,tag:hObYlhuXF2f+bKjyUDty9Q==,type:str]
  pgp: []
  encrypted_regex: ^(egress|ingress)$
  version: 3.9.1
