kubernetes/apps/default/sabnzbd/app/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: sabnzbd-allow-gluetun
  annotations:
    future-me-why: allow ingress and egress to gluetun endpoints; also puts pod in deny-by-default mode for egress
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: sabnzbd
  egress:
    - toPorts:
        - ports:
            - port: "1637"
              protocol: UDP
  ingress:
    - toPorts:
        - ports:
            - port: "1637"
              protocol: UDP
